--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,45 +49,21 @@ jobs:
         mypy .
       continue-on-error: true
 
-    - name: Run tests with pytest
-      run: |
-        pip install pytest pytest-cov
-        pytest --cov=. --cov-report=xml --cov-report=html
-
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: false
-
-  security:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install safety bandit
-
     - name: Security check with safety
-      run: safety check --json
+      run: |
+        pip install safety
+        safety check --json
       continue-on-error: true
 
     - name: Security check with bandit
-      run: bandit -r . -f json
+      run: |
+        pip install bandit
+        bandit -r . -f json
       continue-on-error: true
 
   build:
     runs-on: ubuntu-latest
-    needs: [test, security]
+    needs: [test]
     steps:
     - uses: actions/checkout@v4
 
@@ -115,7 +91,7 @@ jobs:
 
   build-executables:
     runs-on: ${{ matrix.os }}
-    needs: [test, security]
+    needs: [test]
     if: startsWith(github.ref, 'refs/tags/')
     strategy:
       matrix:
@@ -145,7 +121,7 @@ jobs:
         pip install pyinstaller
       shell: bash
 
-    - name: Build the .exe
+    - name: Build with PyInstaller
       run: |
         pyinstaller --onefile --name koroneStrap koroneStrap.py
       shell: bash
