--- a/.github/workflows/blatant-duplicates.yml
+++ b/.github/workflows/blatant-duplicates.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   moderate:
-    if: github.event.label.name == 'rejected (blatantly duplicate)'
+    if: github.event.label.name == 'blatantly duplicate'
     runs-on: ubuntu-latest
     permissions:
       issues: write
